@@ -1,5 +1,4 @@
 require(grDevices); require(graphics)
-oask <- devAskNewPage(dev.interactive(orNone = TRUE))
 
 ## --- Japanese characters in the Hershey Vector Fonts
 
@@ -713,4 +712,3 @@ draw.vf.cell2("#J6647", "#N5083", i, nr); i <- i + 1
 draw.vf.cell2("#J6d55", "#N4633", i, nr); i <- i + 1
 
 par(oldpar)
-devAskNewPage(oask)
