@@ -1,7 +1,5 @@
 require(datasets)
 require(grDevices); require(graphics)
-oask <- devAskNewPage(dev.interactive(orNone = TRUE))
-
 
 x <- 10*(1:nrow(volcano)); x.at <- seq(100, 800, by=100)
 y <- 10*(1:ncol(volcano)); y.at <- seq(100, 600, by=100)
@@ -35,5 +33,3 @@ title(main="Maunga Whau Volcano \n col=gray(100:200/200)", font.main=4)
 
 ## Filled Contours are even nicer sometimes :
 example(filled.contour)
-
-devAskNewPage(oask)
